# JT-labnotebook

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.biolab/: config.json  config.yaml
.biolab/state/: 5mc_outlier_state.json  5mc_simulator_state.json  DROP_pipeline_state.json  popqc_state.json
.github/workflows/: deploy.yml
biotrack/: Cargo.toml
biotrack/benches/: scan_benchmark.rs  tree_benchmark.rs
biotrack/config/: default.toml
biotrack/src/: lib.rs  main.rs
biotrack/src/classifier/: extension_map.rs  mod.rs  pipeline_stage.rs  sample_detector.rs
biotrack/src/cli/: commands.rs
biotrack/src/config/: settings.rs
biotrack/src/hasher/: blake3.rs
biotrack/src/logging/: mod.rs
biotrack/src/relationship/: inference.rs  mod.rs  types.rs
biotrack/src/scanner/: entry.rs  mod.rs  parallel_walker.rs
biotrack/src/store/: mod.rs  schema.rs  sqlite.rs
biotrack/src/tree/: arena.rs  builder.rs  mod.rs  query.rs
biotrack/tests/: integration_scan.rs  integration_tree.rs
dashboard/: index.html
datasets/: index.html
docs/: annotations.md  dashboard.md  index.md  tags.md
docs/datasets/: index.md
docs/experiments/: index.md
docs/notes/: index.md
docs/notes/debugging/: index.md  (+1 more)
docs/projects/: index.md  pacbio-5mc-outlier-analysis.md  popqc.md  tgen-splicing-outlier-analysis.md
docs/registry/: 5mc_outlier.md  5mc_simulator.md  drop_pipeline.md  popqc.md  tgen_rnaseq.md
docs/runs/: 5mc_outlier.md  5mc_simulator.md  drop_pipeline.md  index.md  popqc.md  tgen_rnaseq.md
experiments/: index.html
notes/debugging/: index.html
notes/general/: index.html
notes/observations/: index.html
notes/todo/: index.html
projects/pacbio-5mc-outlier-analysis/: index.html
projects/popqc/: index.html
projects/tgen-splicing-outlier-analysis/: index.html
registry/5mc_outlier/: index.html
registry/5mc_simulator/: index.html
registry/drop_pipeline/: index.html
registry/popqc/: index.html
runs/5mc_outlier/: index.html
runs/5mc_simulator/: index.html
runs/drop_pipeline/: index.html
runs/popqc/: index.html
runs/slurm/: index.html
runs/tgen_rnaseq/: index.html
scripts/: auto_sync.sh
search/: search_index.json
site/: index.html  sitemap.xml
site/annotations/: index.html
site/dashboard/: index.html
site/datasets/: index.html
site/experiments/: index.html
site/notes/: index.html
site/projects/: index.html
site/runs/: index.html
src/biolab/: __init__.py  cli.py  config.py  database.py  models.py
tags/: index.html
(+33 files in other folders)
