[package]
name = "biotrack"
version = "0.1.0"
edition = "2021"
authors = ["JT"]
description = "Intelligent filesystem scanner for bioinformatics project tracking"
license = "MIT"
rust-version = "1.75"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env", "color"] }

# Regex for pattern matching in sample detection
regex = "1.10"

# Lazy static for compiled regex patterns
once_cell = "1.19"

# Filesystem traversal - same engine as ripgrep
ignore = "0.4"

# Hashing - SIMD-accelerated
blake3 = "1.5"

# Database
rusqlite = { version = "0.31", features = ["bundled", "backup"] }

# Serialization / Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Parallelism
rayon = "1.10"

# Human-readable output
humansize = "2.1"
indicatif = "0.17"

# Path handling
pathdiff = "0.2"

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }
assert_fs = "1.1"
predicates = "3.1"

[[bench]]
name = "scan_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"